# game-engine

./: .clang-format  .editorconfig  CMakeLists.txt  NOTES.md  conanfile.txt  main.cpp  osx.mm
src/: Md2Model.cpp  Md2Model.hpp  main.cpp
src/core/: CMakeLists.txt  Md2Model.cpp  Md2Model.hpp  Texture.cpp  Texture.hpp
src/platform/: gl.h  win.cpp
src/viewer/: CMakeLists.txt  imgui_utils.cpp  imgui_utils.h  main.cpp
